infra/k8s/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: broker
  name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: broker
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: broker
    spec:
      containers:
        - env:
            - name: CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS
              value: broker:29092
            - name: CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS
              value: "1"
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL
              value: http://schema-registry-conf:8081
            - name: KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS
              value: "0"
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
              value: "1"
            - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper:2181
          image: confluentinc/cp-server:7.4.0
          name: broker
          ports:
            - containerPort: 9092
            - containerPort: 9101
            - containerPort: 29092
          resources: {}
      hostname: broker
      restartPolicy: Always
status: {}
