infra/k8s/schema-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /Users/keat/.asdf/installs/kompose/1.28.0/bin/kompose -f ../docker-compose.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: schema-registry-conf
  name: schema-registry-conf
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: schema-registry-conf
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /Users/keat/.asdf/installs/kompose/1.28.0/bin/kompose -f ../docker-compose.yml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/flink-poc-default: "true"
        io.kompose.service: schema-registry-conf
    spec:
      containers:
        - env:
            - name: SCHEMA_REGISTRY_HOST_NAME
              value: schema-registry-conf
            - name: SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS
              value: broker:29092
            - name: SCHEMA_REGISTRY_LISTENERS
              value: http://0.0.0.0:8081
          image: confluentinc/cp-schema-registry:7.4.0
          name: schema-registry-conf
          ports:
            - containerPort: 8081
          resources: {}
      hostname: schema-registry-conf
      restartPolicy: Always
status: {}
