infra/k8s/connect-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: connect
  name: connect
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
    - name: "8443"
      port: 8443
      targetPort: 8443
  selector:
    io.kompose.service: connect
status:
  loadBalancer: {}
