infra/k8s/kafka-external-name.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: broker
  name: broker
  namespace: flink-operator
spec:
  type: ExternalName
  externalName: broker.default.svc.cluster.local
