infra/k8s/schema-registry-external-name.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: flink-operator
spec:
  type: ExternalName
  externalName: schema-registry-conf.default.svc.cluster.local
