infra/k8s/schema-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: schema-registry-conf
  name: schema-registry-conf
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: schema-registry-conf
status:
  loadBalancer: {}
